completed button,footer,underline, fixed bg image, removed line

--- a/index.html
+++ b/index.html
@@ -43,27 +43,24 @@
 
 
        <section class="section-two">
-         <span class="line vertical left"></span>
-         <span class="line"></span>
          <div class="div-two">
-           <p> I created this website to improve my</p>
+           <p> Creating this website has helped me to improve my</p>
            <p> front-end skills</p>
          </div>
-         <span class="line"></span>
-         <span class="line vertical right"></span>
        </section>
 
        <div class="element">
          <p>HTML5</p>
          <p>CSS3</p>
        </div>
+
      </div>
 
      <aside class="sidebar">
        <h2>About me</h2>
        <p>Born in Rome, i'm a book lover with a passion for science and technology.
          I love the sea, play the piano and i'm fascinated by the world of cybersecurity.   </p>
-        <a href="about.html" class="button">Read more</a>
+        <a href="about.html" class="bright-button">Read more</a>
       </aside>
 
 
@@ -73,6 +70,7 @@
 
 
      <div class="container-two">
+
        <section class="section-three">
          <div class="div-three">
            <p> I'm also interested in Cybersecurity.</p>
@@ -87,13 +85,14 @@
          <p>Osint</p>
          <p>Networking</p>
        </section>
+
      </div>
 
      <aside class="sidebar-links">
        <p>Social</p>
        <ul>
-         <li><a href="#"><img src="assets/icon/github.svg" alt="github"></a></li>
-         <li><a href="#"><img src="assets/icon/linkedin-one.svg" alt="linkedin"></a></li>
+         <li><a href="https://github.com/DavidWilliaml" target="_blank"><img src="assets/icon/sidebar-github.svg" alt="github"></a></li>
+         <li><a href="https://www.linkedin.com/in/david-william-lai-06b2a5214" target="_blank"><img src="assets/icon/sidebar-linkedin.svg" alt="linkedin"></a></li>
        </ul>
      </aside>
 
@@ -101,7 +100,25 @@
 
    </main>
 
-   <footer></footer>
+   <footer>
+     <ol>
+       <li><a class="underline" href="index.html">Home</a></li>
+       <li><a class="underline" href="about.html">About</a></li>
+       <li><a class="underline" href="contact.html">Contact</a></li>
+     </ol>
+
+     <ul>
+       <li><a href="https://github.com/DavidWilliaml" target="_blank"> <img src="assets/icon/github-footer.svg" alt="github"></a></li>
+       <span class="bottom"></span>
+       <li><a href="https://www.linkedin.com/in/david-william-lai-06b2a5214" target="_blank"> <img src="assets/icon/linkedin-footer.svg" alt="linkedin"></a></li>
+     </ul>
+
+     <p>email: davidwilliamlai10@gmail.com</p>
+
+
+
+
+   </footer>
 
 
 
