Added about page

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>David William Lai</title>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
+
+
   <body>
 
     <header>
       <div class="logo">
         <a href="index.html"><img src="assets/logo/my-logo.svg" alt="logo"></a>
       </div>
-
 
       <nav class="navbar">
         <ul>
@@ -24,9 +25,10 @@
           </li>
         </ul>
       </nav>
+
     </header>
 
-
+  <!-- ===========================MAIN========================== -->
     <main>
 
 
@@ -65,8 +67,7 @@
 
 
 
-
-
+    <!--================ CONTAINER TWO ================-->
 
 
      <div class="container-two">
@@ -97,9 +98,9 @@
      </aside>
 
 
-
    </main>
 
+      <!-- =====================FOOTER==================== -->
    <footer>
      <ol>
        <li><a class="underline" href="index.html">Home</a></li>
@@ -115,10 +116,10 @@
 
      <p>email: davidwilliamlai10@gmail.com</p>
 
-
-
-
    </footer>
+
+
+
 
 
 
