Modificati i valori in %, indentato il codice, spostato i commenti in style, aggiunto meta tag responsive

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
@@ -28,7 +29,7 @@
     </header>
 
     <!-- =====================MAIN-CONTENT===================== -->
-    <div class="main-content">
+     <div class="main-content">
 
         <article class="article-one">
           <section class="bio">
@@ -101,57 +102,8 @@
               <li>Open source intelligence <strong>-Osint-</strong></li>
             </ul>
           </section>
-
-
-
-
-      </article>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <sticky footer to bottom*/ -->
-<!-- /* active current page*/ -->
-
-
-
-
+        </article>
+      </div>
 
 
 
@@ -171,13 +123,7 @@
       </ul>
 
       <p>email: davidwilliamlai10@gmail.com</p>
-
-
-
-
     </footer>
-
-
 
   </body>
 </html>
