--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,87 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
-    <link rel="stylesheet" href="contact">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <h1>contatti</h1>
+    <header>
+      <div class="logo">
+        <a href="index.html"><img src="assets/logo/my-logo.svg" alt="logo"></a>
+      </div>
+
+      <nav class="navbar">
+        <ul>
+          <li class="menu-button"><img  src="assets/icon/my-icon.svg" alt="menu-button">
+            <ul class="links-list">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <h1>Contacts</h1>
+
+    <form action="" method="post">
+      <div class="form">
+        <label for="name">Name</label>
+        <input id="name" type="text">
+
+        <label for='email'>Email</label>
+        <input id='email'name='email'type='email'placeholder='jhon@example.com' required/>
+
+      </div>
+
+    </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer>
+      <ol>
+        <li><a class="underline" href="index.html">Home</a></li>
+        <li><a class="underline" href="about.html">About</a></li>
+        <li><a class="underline" href="contact.html">Contact</a></li>
+      </ol>
+
+      <ul>
+        <li><a href="https://github.com/DavidWilliaml" target="_blank"> <img src="assets/icon/github-footer.svg" alt="github"></a></li>
+        <span class="bottom"></span>
+        <li><a href="https://www.linkedin.com/in/david-william-lai-06b2a5214" target="_blank"> <img src="assets/icon/linkedin-footer.svg" alt="linkedin"></a></li>
+      </ul>
+
+      <p>email: davidwilliamlai10@gmail.com</p>
+
+    </footer>
+
+
 
   </body>
 </html>
