--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David William Lai</title>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
@@ -117,51 +118,5 @@
      <p>email: davidwilliamlai10@gmail.com</p>
 
    </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </html>
-  </body>
+ </body>
+</html>
