completato le pagine, impostato media queries per smartphone e tablet, unico problema è la pagina about per tablet, e poi da rifare header

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   </head>
   <body>
 
+    <!-- =======================NAVBAR==========================!-->
 
     <header>
       <div class="logo">
@@ -31,8 +32,8 @@
     <!-- =====================MAIN-CONTENT===================== -->
      <div class="main-content">
 
-        <article class="article-one">
-          <section class="bio">
+        <article>
+          <section>
             <p>Who am i?</p>
             <p> Mi chiamo <strong>David William</strong>, classe '94. Si lo so, dal mio nome
             probabilmente anche tu starai cercando di indovinare le mie
@@ -46,12 +47,12 @@
             <p>Amo gli animali, la natura  ed in particolar modo il mare, cosa
             che mi ha spinto a conseguire la <strong>patente nautica</strong>.  </p>
           </section>
+       </article>
+
+       <img class="my-photo" src="assets/img/me.png" alt="profile picture" >
 
 
-          <img class="my-photo" src="assets/img/me.png" alt="profile picture" >
-
-
-
+        <article>
           <section class="academic-background">
             <p>Academic background</p>
             <p>Durante il mio percorso universitario ho avuto modo di studiare
@@ -64,49 +65,71 @@
             <strong>sicurezza cibernetica</strong>.  Abbiamo inoltre affrontato argomenti come la
             <strong>Cyber threat intelligence</strong> e la ricerca informativa con l'ausilio di
             strumenti Osint nell'arco di esercitazioni pratiche. </p>
-            <p>Attualmente sto seguendo il percorso <strong>Full stack web developer</strong> su
-            Start2impact, grazie al quale sto affinando le mie <strong>competenze IT</strong>.
-            In particolare la creazione di questo sito mi ha permesso di approfondire i seguenti strumenti:</p>
-            <ul>
-              <li>linguaggio di markup <span>html5</span></li>
-              <li>linguaggio di formattazione <span>css3</span></li>
-            </ul>
           </section>
         </article>
 
-        <article class="article-two">
-          <section class="experience">
-            <p>Experience</p>
-            <p>Nel 2020 ho lavorato nell'ambito di un tirocinio come
-            <strong>intelligence assistant</strong> presso Hermes Bay srl occupandomi di:</p>
-            <ul>
-              <li>Ricerca informativa tramite strumenti Osint e <strong>Socmint</strong></li>
-              <li>Reportistica su dati di aziende</li>
-            </ul>
-            <p>Nel 2018 ho svolto un tirocinio presso uno studio di consulenza grafico-peritale privato.
-              Le principali mansioni da me svolte consistevano in:
-            </p>
-            <ul>
-              <li>Trascrizione di intercettazioni tramite ausilio di strumenti informatici</li>
-              <li>Gestione amministrativa  delle pratiche</li>
-            </ul>
-          </section>
-
+        <article>
           <section class="skill">
             <p>Skill</p>
             <p>Essendo interessato ed appassionato al mondo della cybersecurity
-            sto affinando le seguenti competenze:</p>
-            <ul>
-              <li>conoscenza del sistema operativo <strong>GNU/linux</strong></li>
-              <li>funzionamento delle <strong>reti</strong> e dispositivi correlati</li>
-              <li>Open source intelligence <strong>-Osint-</strong></li>
-            </ul>
-          </section>
-        </article>
-      </div>
+              sto affinando le seguenti competenze:</p>
+
+              <ul>
+                <li>conoscenza del sistema operativo <strong>GNU/linux</strong></li>
+                <li>funzionamento delle <strong>reti</strong> e dispositivi correlati</li>
+                <li>Open source intelligence <strong>-Osint-</strong></li>
+              </ul>
+              <p>Attualmente sto seguendo il percorso <strong>Full stack web developer</strong> su
+              Start2impact, grazie al quale sto affinando le mie <strong>competenze IT</strong>.
+              In particolare la creazione di questo sito mi ha permesso di approfondire i seguenti strumenti:</p>
+              <ul>
+                <li>linguaggio di markup <span>html5</span></li>
+                <li>linguaggio di formattazione <span>css3</span></li>
+              </ul>
+
+            </section>
+          </article>
+          
+            <div class="empty"></div>
+
+          <article>
+            <section class="experience">
+              <p>Experience</p>
+              <p>Nel 2020 ho lavorato nell'ambito di un tirocinio come
+                <strong>intelligence assistant</strong> presso Hermes Bay srl occupandomi di:</p>
+
+                <ul>
+                  <li>Ricerca informativa tramite strumenti Osint e <strong>Socmint</strong></li>
+                  <li>Reportistica su dati di aziende</li>
+                </ul>
+
+                <p>Nel 2018 ho svolto un tirocinio presso uno studio di consulenza grafico-peritale privato.
+                  Le principali mansioni da me svolte consistevano in:
+                </p>
+
+
+                <ul>
+                  <li>Trascrizione di intercettazioni tramite ausilio di strumenti informatici</li>
+                  <li>Gestione amministrativa  delle pratiche</li>
+                </ul>
+              </section>
+            </article>
+          </div>
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+        <!-- =======================FOOTER==========================!-->
 
 
     <footer>
