--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 
 
   <body>
+    <!-- =======================NAVBAR==========================!-->
 
     <header>
-      <div class="logo">
-        <a href="index.html"><img src="assets/logo/my-logo.svg" alt="logo"></a>
-      </div>
+      <a href="index.html"><img src="assets/logo/my-logo.svg" alt="logo"></a>
 
       <nav class="navbar">
         <ul>
@@ -36,21 +35,22 @@
      <div class="container-one">
 
        <section class="section-one">
-         <div class="div-one">
            <h1>Hi! I'm David William.</h1>
            <p> My goal is to become a full stack web developer.</p>
            <p> I'm an ambitious guy who loves to learn new things.</p>
-         </div>
-         <span class="line vertical"></span>
+           <span class="vertical-line"></span>
        </section>
+
 
 
        <section class="section-two">
-         <div class="div-two">
            <p> Creating this website has helped me to improve my</p>
            <p> front-end skills</p>
-         </div>
+           <span class="left vertical-line"></span>
+           <span class="right vertical-line"></span>
        </section>
+
+
 
        <div class="element">
          <p>HTML5</p>
@@ -62,7 +62,7 @@
      <aside class="sidebar">
        <h2>About me</h2>
        <p>Born in Rome, i'm a book lover with a passion for science and technology.
-         I love the sea, play the piano and i'm fascinated by the world of cybersecurity.   </p>
+         I love the sea, play the piano and i'm fascinated by the world of cybersecurity.</p>
         <a href="about.html" class="bright-button">Read more</a>
       </aside>
 
