completato media queries, manca debug codice, soluzione header, levare html, mettere active current page

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
             alla <strong>sicurezza</strong> grazie anche ad esami come legislazione delle investigazioni private e criminologia. </p>
             <p>Successivamente ho conseguito un master presso la Sioi in
             Protezione Strategica del sistema paese nel quale sono state trattate
-            tematiche  normative come la direttiva <strong>NIS</strong> ed i DPCM sul perimetro di
+             normative come la direttiva <strong>NIS</strong> ed i DPCM sul perimetro di
             <strong>sicurezza cibernetica</strong>.  Abbiamo inoltre affrontato argomenti come la
             <strong>Cyber threat intelligence</strong> e la ricerca informativa con l'ausilio di
             strumenti Osint nell'arco di esercitazioni pratiche. </p>
@@ -89,7 +89,7 @@
 
             </section>
           </article>
-          
+
             <div class="empty"></div>
 
           <article>
