risolto header, manca solo levare html,debug, presentazione e pushata su github

--- a/about.html
+++ b/about.html
@@ -11,23 +11,17 @@
     <!-- =======================NAVBAR==========================!-->
 
     <header>
-      <div class="logo">
-        <a href="index.html"><img src="assets/logo/my-logo.svg" alt="logo"></a>
-      </div>
-
-
+      <a href="index.html"><img src="assets/logo/my-logo.svg" alt="logo"></a>
       <nav class="navbar">
-        <ul>
-          <li class="menu-button"><img  src="assets/icon/my-icon.svg" alt="menu-button">
-            <ul class="links-list">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </li>
+        <label for="check" class="menu-button"><img  src="assets/icon/my-icon.svg" alt="menu-button"></label>
+        <input id="check" type="checkbox" name="" value="">
+        <ul class="links-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-    </header>
+   </header>
 
     <!-- =====================MAIN-CONTENT===================== -->
      <div class="main-content">
