--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             dall'astronomia alla biologia, mie due grandi passioni insieme
             all'informatica e all'universo della <strong>cybersecurity</strong>.</p>
             <p>Suono il pianoforte dall'età di 9 anni, principalmente musica
-            classica con un particolare interesse per <strong>Debussy e Chopin</strong>.</p>
+            classica con un'inclinazione per <strong>Debussy e Chopin</strong>.</p>
             <p>Amo gli animali, la natura  ed in particolar modo il mare, cosa
             che mi ha spinto a conseguire la <strong>patente nautica</strong>.  </p>
           </section>
