--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
     <form action="" method="post">
       <div class="form">
-        <h1>Contacts</h1>
+        <h1>Contact me</h1>
         <label for="name">Name</label>
         <input id="name" type="text">
 
