--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          </div>
        </section>
 
-       <p> I've a good knowledge of the following topics</p>
+       <p> I've a good knowledge of the following topics:</p>
 
 
        <section class="section-four">
