add favicon, remove email and add sticky mobile header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David William Lai</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/png" sizes="16x16"  href="assets/favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
   </head>
 
 
@@ -111,6 +114,7 @@
        <li><a href="https://www.linkedin.com/in/david-william-lai-06b2a5214" target="_blank"> <img src="assets/icon/linkedin-footer.svg" alt="linkedin"></a></li>
      </ul>
 
+     <p>© 2022 Created by: David William Lai</p>
 
    </footer>
  </body>
