--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/png" sizes="16x16"  href="assets/favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <!-- =======================NAVBAR==========================!-->
@@ -54,6 +57,8 @@
         <span class="bottom"></span>
         <li><a href="https://www.linkedin.com/in/david-william-lai-06b2a5214" target="_blank"> <img src="assets/icon/linkedin-footer.svg" alt="linkedin"></a></li>
       </ul>
+      <p>© 2022 Created by: David William Lai</p>
+
 
 
     </footer>
